fixed delete comment modal not showing up.

--- a/volition/public/styles/premium.css
+++ b/volition/public/styles/premium.css
@@ -65,10 +65,7 @@ a[href^='https://www.reddit.com/premium'] {
 div._2Bejocqb-InO8686E2ehf._1kJxmNuSOWrudEvEj4lSc8 {
     display: none !important;
 }
-/*style snoovatar modal background shader*/
-div._1DK52RbaamLOWw5UPaht_S._1acwN_tUhJ8w-n7oCp-Aw3 {
-    display: none !important;
-}
+
 
 /*snoovatar premium gold aura top*/
 div._18b8M-cZftX_frkYRy3DN1 {
